# Awesome-Pascal-Compiler

./: .gitignore  CMakeLists.txt  PASCAL Syntax_2020.doc  README.md
src/: CMakeLists.txt  main.cpp  pascal.l  pascal.y
src/ast/: CMakeLists.txt  ast.cpp  ast.h
src/naive/: comp.sh  pascal.cpp  pascal.hpp  pascal.l  pascal.y  scanner  scanner.cpp  test  txt
src/naive/ast/: ast.cpp  ast.h  test  test.cpp
src/naive/pasfile/: comment.pascal  procTest.pascal  stmtTest.pascal  typeTest.pascal
src/naive/sem/: sem.cpp  sem.h
src/parser/: CMakeLists.txt  pascal.l  pascal.y
src/sem/: CMakeLists.txt  sem.cpp  sem.h
test/: CMakeLists.txt
test/pasfile/: const.pas  exprTest.pas  gen.pas  gen_exp.pas  gen_func.pas  gen_pointer.pas  gen_type.pas  stmtTest.pt  typeTest.pas
